# yachtsql

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  PLAN.md  PLAN_NEXT.md  README.md  REMAINING_WORK.md  WORKER_10_PLAN.md  WORKER_11_PLAN.md  WORKER_12_PLAN.md  WORKER_13_PLAN.md  WORKER_14_PLAN.md  WORKER_15_PLAN.md  WORKER_16_PLAN.md  WORKER_17_PLAN.md  WORKER_18_PLAN.md  WORKER_19_PLAN.md  WORKER_1_PLAN.md  WORKER_20_PLAN.md  WORKER_2_PLAN.md  WORKER_3_PLAN.md  WORKER_4_PLAN.md  WORKER_5_PLAN.md  WORKER_6_PLAN.md  WORKER_7_PLAN.md  WORKER_8_PLAN.md  WORKER_9_PLAN.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  float_utils.rs  lib.rs  result.rs
crates/common/src/types/: coercion.rs  mod.rs
crates/executor/: Cargo.toml
crates/executor/benches/: parallel_execution.rs  parquet_loading.rs
crates/executor/src/: async_executor.rs  catalog.rs  clickhouse.rs  concurrent_catalog.rs  concurrent_session.rs  correlation.rs  evaluator.rs  executor.rs  ir_evaluator.rs  js_udf.rs  legacy_evaluator.rs  legacy_executor.rs  lib.rs  physical_planner.rs  plan.rs  plan_cache.rs  plan_executor.rs  py_udf.rs  record_batch.rs  session.rs  table.rs
crates/executor/src/executor/: aggregate.rs  concurrent.rs  cte.rs  ddl.rs  distinct.rs  dml.rs  filter.rs  join.rs  limit.rs  mod.rs  project.rs  qualify.rs  sample.rs  scan.rs  scripting.rs  set_ops.rs  sort.rs  traits.rs  unnest.rs  values.rs  window.rs  window_utils.rs
crates/executor/src/executor/aggregate/: accumulator.rs  args.rs  columnar.rs  grouping.rs  mod.rs
crates/executor/src/executor/concurrent/: cte.rs  ddl.rs  dml.rs  dql.rs  gap_fill.rs  io.rs  join.rs  mod.rs  scripting.rs  set_ops.rs  utils.rs
crates/executor/src/executor/ddl/: mod.rs  plan_conv.rs  (+5 more)
crates/executor/src/explain/: mod.rs  plan_formatter.rs
crates/executor/src/information_schema/: mod.rs
crates/executor/src/ir_evaluator/: helpers.rs  mod.rs
crates/executor/src/pg_catalog/: mod.rs
crates/executor/src/query_executor/: aggregator.rs  enforcement.rs  function_validator.rs  logical_to_physical.rs  mod.rs  returning.rs  statement_validator.rs
crates/executor/src/resource_limits/: memory_manager.rs  memory_pool.rs  monitoring.rs  priority.rs  query_registry.rs
crates/executor/src/system_schema/: mod.rs
crates/executor/tests/: adversarial_null_tests.rs  aggregate_clickhouse_functions.rs  case_expressions.rs  concurrent_test.rs  date_time_functions.rs  dialect_normalization_regression_tests.rs  drop_table_basic.rs  enum_sizes.rs  expression_projection.rs  foreign_key_constraints.rs  math_functions.rs  physical_operators_integration_test.rs  plan_cache_benchmark_test.rs  plan_cache_integration_test.rs  primary_key_unique_constraints.rs  recursive_cte_debug.rs  resource_limits_integration.rs  sql2023_integration.rs  strategy_operators_test.rs  test_assertions.rs  test_empty_aggregates.rs  test_join_temp.rs  test_not_equal_operator.rs  test_recursive_simple.rs
crates/executor/tests/common/: README.md  assertions.rs  mod.rs
crates/executor/tests/sql_runner/: mod.rs
crates/executor/tests/support/: mod.rs
crates/functions/: Cargo.toml
crates/functions/src/: array.rs  encoding.rs  fulltext.rs  geography.rs  geometric.rs  lib.rs  misc.rs  network.rs  polymorphic_table_functions.rs  range.rs  registry.rs  scalar.rs  vector.rs
crates/functions/src/aggregate/: approximate.rs  postgresql.rs  statistical.rs
crates/functions/src/approximate/: functions.rs  hyperloglog.rs  tdigest.rs
crates/functions/src/dialects/: bigquery.rs  clickhouse.rs  core.rs  mod.rs  postgres.rs
crates/functions/src/json/: extract.rs  functions.rs  mod.rs  path.rs  postgres.rs  predicates.rs
crates/functions/src/registry/: clickhouse_datetime.rs  conditional_funcs.rs  conversion_funcs.rs  encryption_funcs.rs  extension_funcs.rs  fulltext_funcs.rs  geography_funcs.rs  json_funcs.rs  math_funcs.rs  network_funcs.rs  null_funcs.rs  random_funcs.rs  range_funcs.rs  rounding_funcs.rs  statistical_aggregates.rs  time_window_funcs.rs  ulid_funcs.rs  uuid_funcs.rs  vector_funcs.rs
crates/functions/tests/: aggregations.rs  arithmetic_operators.rs  date_time_functions.rs  math_functions.rs  string_functions_unit_test.rs
crates/functions/tests/common/: mod.rs
crates/ir/: Cargo.toml
crates/ir/src/: expr.rs  function.rs  lib.rs  plan.rs  schema.rs
crates/ir/src/expr/: datetime.rs  functions.rs  literal.rs  mod.rs  operators.rs  types.rs  window.rs
crates/ir/src/plan/: cte.rs  ddl.rs  dml.rs  mod.rs  query.rs  scripting.rs  set_ops.rs  unnest.rs  window.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: classifier.rs  cost_model.rs  lib.rs  optimized_logical_plan.rs  ordering.rs  physical_plan.rs  planner.rs  properties.rs  tests.rs  visitor.rs
crates/optimizer/src/rules/: aggregate_pushdown.rs  boolean_simplification.rs  constant_folding.rs  cse.rs  distinct_elimination.rs  eliminate_redundant.rs  expression_normalization.rs  filter_merge.rs  filter_merge_v2.rs  in_list_conversion.rs  index_selection.rs  interesting_order.rs  join_reorder.rs  late_materialization.rs  limit_pushdown.rs  mod.rs  null_propagation.rs  partition_pruning.rs  predicate_pushdown.rs  projection_pushdown.rs  subquery_flattening.rs  union_optimization.rs  window_optimization.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast_visitor.rs  expr_planner.rs  lib.rs  pattern_matcher.rs  planner.rs  sql_context.rs  validator.rs
crates/parser/src/ast_visitor/: ddl.rs  dml.rs
crates/parser/src/parser/: clickhouse_extensions.rs  custom_statements.rs  helpers.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/benches/: README.md  bitmap_bench.rs
crates/storage/src/: bitmap.rs  column.rs  constraints.rs  dictionary.rs  extension.rs  foreign_keys.rs  lib.rs  schema.rs  sequence.rs  transaction.rs
crates/storage/src/simd/: avx.rs  backend.rs
crates/storage/src/table/: constraints.rs  core.rs  mod.rs  partition.rs  schema_ops.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
(+720 files in other folders)
