[package]
name = "yachtsql"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL - Lightweight in-memory SQL test database with columnar storage for rust programs"

[dependencies]
# Internal crates
yachtsql-common = { path = "crates/common" }
yachtsql-storage = { path = "crates/storage" }
yachtsql-ir = { path = "crates/ir" }
yachtsql-optimizer = { path = "crates/optimizer" }
yachtsql-parser = { path = "crates/parser" }
yachtsql-functions = { path = "crates/functions" }
yachtsql-executor = { path = "crates/executor" }

sentry = "0.45.0"

# SQL parsing (patched with BigQuery scripting support via [patch.crates-io])
sqlparser = { version = "0.59", features = ["visitor"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.7"
toml = "0.8"

# Utilities
itertools = "0.13"
indexmap = { version = "2.12", features = ["serde"] }
hashbrown = "0.15"
ordered-float = "4.5"
natord = "1.0"
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.11"

# Random number generation
rand = "0.8"

# Decimal arithmetic for NUMERIC/DECIMAL types
rust_decimal = { version = "1.36", features = ["serde"] }

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Unicode normalization for collations
unicode-normalization = "0.1"

# SIMD alignment
aligned-vec = "0.6"

# Bloom filter
bloomfilter = "3.0"

# Fast non-cryptographic hash for probabilistic data structures
ahash = "0.8"

# Cryptographic hash functions
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Non-cryptographic hash functions
farmhash = "1.1"

# Network operations
ipnetwork = "0.20"
url = "2.5"
publicsuffix = "2.2"
lazy_static = "1.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Geography/GIS support
geo = "0.28"
wkt = { version = "0.11", features = ["geo-types"] }
geojson = { version = "0.24", features = ["geo-types"] }
geohash = "0.13"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
sqlparser = { version = "0.59", features = ["visitor"] }
arrow = { version = "54", default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow"] }
tempfile = "3.14"
yachtsql-test-utils = { path = "crates/test-utils" }

# Linting configuration
# Run with: cargo clippy -- -D warnings
[lints.clippy]
# Enum-specific lints to enforce best practices
large-enum-variant = "warn"          # Alert when variant is >200 bytes larger than median
enum-variant-names = "warn"          # Enforce consistent enum variant naming
wildcard-enum-match-arm = "warn"     # Discourage wildcards in match (prefer exhaustive)

# Note: missing-docs is a rustc lint, not clippy, so configure separately if needed

[workspace]
members = [
    ".",
    "crates/common",
    "crates/executor",
    "crates/functions",
    "crates/ir",
    "crates/optimizer",
    "crates/parser",
    "crates/storage",
    "crates/test-utils",
]
resolver = "2"

# Use forked sqlparser with BigQuery scripting support for all workspace crates
[patch.crates-io]
sqlparser = { git = "https://github.com/alexchoi0/yachtsql-sqlparser.git", branch = "main" }
