[package]
name = "yachtsql-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command-line interface for YachtSQL"
repository = "https://github.com/alexchoi0/yachtsql"
homepage = "https://github.com/alexchoi0/yachtsql"
documentation = "https://docs.rs/yachtsql-cli"
keywords = ["sql", "database", "bigquery", "cli"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "yachtsql"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/yachtsql-{ target }{ archive-suffix }"
bin-dir = "yachtsql-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
yachtsql = { version = "0.1.0", path = "../.." }
yachtsql-executor = { version = "0.1.0", path = "../executor" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
comfy-table = "7.1"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4"] }
directories = "5.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
