[package]
name = "yachtsql-ir"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL intermediate representation (IR) for logical plans and expressions"
repository = "https://github.com/alexchoi0/yachtsql"
homepage = "https://github.com/alexchoi0/yachtsql"
documentation = "https://docs.rs/yachtsql-ir"
keywords = ["sql", "database", "bigquery", "ir"]
categories = ["database"]

[dependencies]
# Core types and errors
yachtsql-common = { version = "0.1.0", path = "../common" }
yachtsql-storage = { version = "0.1.0", path = "../storage" }

# SQL parsing
yachtsql-sqlparser = { version = "0.59", features = ["visitor"] }

# Data structures
indexmap = { version = "2.12", features = ["serde"] }
ordered-float = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
yachtsql = { version = "0.1.0", path = "../.." }
yachtsql-test-utils = { version = "0.1.0", path = "../test-utils" }
