[package]
name = "yachtsql-parser"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "SQL parser and planner for YachtSQL (BigQuery dialect)"

[dependencies]
yachtsql-common = { path = "../common" }
yachtsql-ir = { path = "../ir" }
yachtsql-storage = { path = "../storage" }

sqlparser = { version = "0.59", features = ["visitor"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rust_decimal = { version = "1.36", features = ["serde"] }

chrono = "0.4"

ordered-float = { version = "4.5", features = ["serde"] }
hex = "0.4"
regex = "1"
