[package]
name = "yachtsql-storage"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "YachtSQL storage engine with columnar storage for BigQuery"
repository = "https://github.com/alexchoi0/yachtsql"
homepage = "https://github.com/alexchoi0/yachtsql"
documentation = "https://docs.rs/yachtsql-storage"
keywords = ["sql", "database", "bigquery", "columnar"]
categories = ["database"]

[dependencies]
yachtsql-common = { version = "0.1.4", path = "../common" }

aligned-vec = "0.6"
indexmap = { version = "2.12", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

rust_decimal = { version = "1.36", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
aligned-vec = "0.6"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "bitmap_bench"
harness = false
